--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#doctors">Doctors</a></li>
-                    <li><a href="#ftr" class="btn-contact">Contact Us</a></li>
+                    <li><a href="#ftr" class="btn-contact">Contact</a></li>
                 </ul>
             </div>
             <i class='bx bx-menu' id="menu"></i>
